--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,14 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary: #030014;
+  --color-primary: #000000;
 
   --color-light-100: #cecefb;
   --color-light-200: #a8b5db;
 
   --color-gray-100: #9ca4ab;
 
-  --color-dark-100: #0f0d23;
+  --color-dark-100: #700000;
 
   --font-dm-sans: DM Sans, sans-serif;
 
@@ -102,7 +102,7 @@
   }
 
   .movie-card {
-    @apply bg-dark-100 p-5 rounded-2xl shadow-inner shadow-light-100/10;
+    @apply bg-light-100/5 p-5 rounded-2xl shadow-inner shadow-light-100/10;
 
     & img {
       @apply rounded-lg h-auto w-full;
@@ -143,7 +143,7 @@
 }
 
 @utility text-gradient {
-  @apply bg-linear-to-r from-[#D6C7FF] to-[#AB8BFF] bg-clip-text text-transparent;
+  @apply bg-linear-to-r from-[#ffffff] to-[#f81a1a] bg-clip-text text-transparent;
 }
 
 @utility fancy-text {
