--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,10 @@
     }
   }
 
+  .skeleton-text {
+    @apply bg-gray-100/75 animate-pulse rounded-2xl;
+  }
+
   .movie-card {
     @apply bg-light-100/5 p-5 rounded-2xl shadow-inner shadow-light-100/10;
 
